ci: use extra to set qt mirror in iqta
Starting from install-qt-action 2.12.0, the input parameter "mirror" has
  been removed. However, we can still choose a mirror by passing the
  parameters directly to aqtinstall via "extra".

Ref:
- https://github.com/jurplel/install-qt-action/releases/tag/v2.12.0
- https://github.com/jurplel/install-qt-action/commit/49465b8677c54237625d80d9294b4c42fa43a645#commitcomment-46393956

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           version: ${{ matrix.qt_version }}
           arch: ${{ matrix.qtarch }}
-          mirror: "http://mirrors.ocf.berkeley.edu/qt/"
+          extra: "-b http://mirrors.ocf.berkeley.edu/qt/"
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - name: Install Python 3.7 version
         if: matrix.platform == 'windows-latest'
