--- a/.github/workflows/cpack-nsis.yml
+++ b/.github/workflows/cpack-nsis.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           version: ${{ matrix.qt_version }}
           arch: ${{ matrix.qtarch }}
-          mirror: 'http://mirrors.ocf.berkeley.edu/qt/'
+          extra: "-b http://mirrors.ocf.berkeley.edu/qt/"
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
 # Windows----------------------------------------------------------------------
 #      - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Build preparation - Download Dependencies
