--- a/.github/workflows/check-format.yml
+++ b/.github/workflows/check-format.yml
@@ -7,13 +7,13 @@ jobs:
     name: "Check Clang Format"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: "Install clang-format-9"
+      - uses: actions/checkout@v4
+      - name: "Install clang-format"
         run: |
           sudo apt-get update
-          sudo apt-get install clang-format-9
+          sudo apt-get install clang-format
       - name: "Format Codes"
-        run: clang-format-9 -i src/*.cpp src/*/*.cpp  src/*/*.h
+        run: clang-format -i src/*.cpp src/*/*.cpp  src/*/*.h
       - name: Check diff
         run: git diff --exit-code HEAD
       - name: Create Pull Request
